--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
     environment:
       - NODE_ENV=production
       - CHROMA_URL=http://chromadb:8000
-      - GOOGLE_API_KEY=${GOOGLE_API_KEY}
+      - GOOGLE_API_KEY=AIzaSyDfYoheEHRlf_Tr9WDZj-USQTMi4x221ns
     depends_on:
       - chromadb
     networks:
