--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 GOOGLE_API_KEY=AIzaSyDfYoheEHRlf_Tr9WDZj-USQTMi4x221ns
 CHROMA_URL=http://localhost:8000
-NODE_ENV=development 
+NODE_ENV=development
+DISABLE_ONNX_RUNTIME=1 
