--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "langchain": "^0.3.21",
     "lucide-react": "^0.488.0",
     "next": "15.3.0",
+    "node-fetch": "^3.3.2",
     "pdf-parse": "^1.1.1",
     "puppeteer": "^24.6.1",
     "react": "^19.0.0",
@@ -37,5 +38,6 @@
     "ts-node": "^10.9.2",
     "tsx": "^4.19.3",
     "typescript": "^5"
-  }
+  },
+  "type": "module"
 }
