--- a/package.json
+++ b/package.json
@@ -13,18 +13,27 @@
     "@langchain/community": "^0.3.40",
     "@langchain/core": "^0.3.44",
     "@langchain/google-genai": "^0.2.3",
+    "@radix-ui/react-avatar": "^1.1.4",
+    "@radix-ui/react-dropdown-menu": "^2.1.7",
+    "@radix-ui/react-hover-card": "^1.1.7",
+    "@radix-ui/react-slot": "^1.2.0",
     "@xenova/transformers": "^2.17.2",
     "ai": "^4.3.6",
     "axios": "^1.8.4",
     "cheerio": "^1.0.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "langchain": "^0.3.21",
     "lucide-react": "^0.488.0",
     "next": "15.3.0",
+    "next-themes": "^0.4.6",
     "node-fetch": "^3.3.2",
     "pdf-parse": "^1.1.1",
     "puppeteer": "^24.6.1",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "tailwind-merge": "^3.2.0",
+    "tw-animate-css": "^1.2.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
