--- a/package.json
+++ b/package.json
@@ -14,15 +14,25 @@
     "@langchain/core": "^0.3.44",
     "@langchain/google-genai": "^0.2.3",
     "@radix-ui/react-avatar": "^1.1.4",
+    "@radix-ui/react-collection": "^1.1.3",
+    "@radix-ui/react-direction": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.7",
+    "@radix-ui/react-focus-guards": "^1.1.2",
+    "@radix-ui/react-focus-scope": "^1.1.3",
     "@radix-ui/react-hover-card": "^1.1.7",
+    "@radix-ui/react-id": "^1.1.1",
+    "@radix-ui/react-menu": "^2.1.7",
+    "@radix-ui/react-roving-focus": "^1.1.3",
     "@radix-ui/react-slot": "^1.2.0",
     "@xenova/transformers": "^2.17.2",
     "ai": "^4.3.6",
+    "aria-hidden": "^1.2.4",
     "axios": "^1.8.4",
     "cheerio": "^1.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "detect-node-es": "^1.1.0",
+    "get-nonce": "^1.0.1",
     "langchain": "^0.3.21",
     "lucide-react": "^0.488.0",
     "next": "15.3.0",
@@ -32,8 +42,13 @@
     "puppeteer": "^24.6.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-remove-scroll": "^2.6.3",
+    "react-remove-scroll-bar": "^2.3.8",
+    "react-style-singleton": "^2.2.3",
     "tailwind-merge": "^3.2.0",
-    "tw-animate-css": "^1.2.5"
+    "tw-animate-css": "^1.2.5",
+    "use-callback-ref": "^1.3.3",
+    "use-sidecar": "^1.1.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
